k8s/cloudflared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: loc

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudflared

  template:
    metadata:
      labels:
        app: cloudflared

    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2026.8.1

          args:
            - tunnel
            - --no-autoupdate
            - --config
            - /etc/cloudflared/config/config.yml
            - run
            - --token-file
            - /etc/cloudflared/token/token

          volumeMounts:
            - name: tunnel-token
              mountPath: /etc/cloudflared/token
              readOnly: true

            - name: tunnel-config
              mountPath: /etc/cloudflared/config
              readOnly: true

      volumes:
        - name: tunnel-token
          secret:
            secretName: cloudflared-token

        - name: tunnel-config
          configMap:
            name: cloudflared-config
