k8s/loc-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loc-frontend
  namespace: loc
spec:
  replicas: 1

  selector:
    matchLabels:
      app: loc-frontend

  template:
    metadata:
      labels:
        app: loc-frontend

    spec:
      containers:
        - name: loc-frontend
          image: loc-frontend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
