k8s/loc-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loc-frontend
  namespace: loc
spec:
  type: NodePort

  selector:
    app: loc-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
