k8s/loc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loc-ingress
  namespace: loc
spec:
  ingressClassName: nginx

  rules:
    - host: lordofcricket.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: loc-backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: loc-frontend
                port:
                  number: 80
